<resources>
    <string name="app_name">Guedr</string>
    <string name="hello_world">Hola amundio!</string>
    <string name="offline_weather_image_desc">Offline Weather</string>
    <string name="change_spanish_system">Cambiar al Sistema Español</string>
    <string name="change_american_system">Cambiar al Sistema Americano</string>
    <string name="temperatura_maxima">Temperatura máxima de: %.1f ºC</string>
    <string name="temperatura_minima">Temperatura mínima de: %.1f ºC</string>
    <string name="humedad">Humedad relativa de: %.1f</string>
    <string name="soleado_con_nubes">Soleado con nubes</string>
    <string name="desc_imagen_soleado_con_nubes">Imágen de soleado y con nubes</string>
    <string name="menu_settings">Ajustes</string>
    <string name="preferencias_actualizadas">Preferencias actualizadas</string>
    <string name="deshacer">Deshacer</string>
    <string name="city_example">Madrid</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="previus">Anterior</string>
    <string name="next">Siguiente</string>
</resources>
